--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -79,10 +79,10 @@
     </div>
 
     <div id="footer">
-      <div class="container">
+      <div class="container" style="text-align:center">
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a><!-- 
+          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a> -->
         </p>
       </div>
     </div>
