--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -77,3 +77,154 @@ h1, h2, h3, h4 {
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
+
+
+
+
+/*----------------------------------*/
+body{
+    background-color: #fff;
+}
+
+ul, li{
+    padding: 0;
+    margin-top: 0;
+    list-style: none;
+}
+a:hover{
+  color: #18BC9C
+}
+
+.page-header h1{
+    color: #666;
+}
+.container{
+    margin: 0 auto;
+}
+
+.posts-box, .tools-box{
+    float: left;
+    overflow: hidden;
+}
+.tools-box li, .posts li{
+    padding: 16px;
+    margin: 10px 5px;
+    background-color: #fff;
+    box-shadow: #aaa 1px 1px 10px;
+}
+
+.posts{
+    overflow: hidden;
+}
+.posts li{
+    float: left;
+    position: relative;
+    height:120px;
+}
+
+.posts .title{
+    padding: 2px 8px 2px 0;
+    margin-bottom: 6px;
+    border-bottom: #efefef 1px solid;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.posts .article-excerpt{
+    height: 42px;
+    overflow: hidden;
+}
+.posts .more{
+    position: absolute;
+    right: 20px;
+    bottom: 10px;
+}
+
+
+.tools-box li{
+    width:220px;
+    margin-top: 10px;
+    vertical-align: top;
+}
+
+.tools-box .profile{
+
+}
+
+.tools-box .profile img{
+    width:100%;
+}
+@media screen and (min-width: 1200px){ 
+/* CSS Styles */
+    .container{
+        max-width: 1200px;
+    }
+    .posts-box{
+        width:78%;
+    }
+    .posts li{
+        width:48%;
+    }
+
+    .posts li:nth-child(2n) {
+      margin-left: 12px;
+    }
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1200px){ 
+/* CSS Styles */
+    .container{
+        min-width: 1000px;
+        max-width: 1200px;
+    }
+    .posts-box{
+        width:76%;
+    }
+    .posts li{
+        width:46%;
+    }
+    .posts li:nth-child(2n) {
+      margin-left: 12px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1000px) { 
+/* CSS Styles */
+    .container{
+        min-width: 768px;
+        max-width: 1000px;
+    }
+    .posts-box, .tools-box{
+        float:none;
+        margin:0 auto;
+        width: 95%;
+    }
+    .posts-box .posts li{
+        width:48%;
+    }
+    .tools-box li{
+        display: inline-block;
+        width:220px;
+    }
+}
+
+@media screen and (max-width: 768px) { 
+/* CSS Styles */
+    .container{
+        min-width: 200px;
+        max-width: 768px;
+    }
+
+    .posts-box, .tools-box{
+        float:none;
+        margin:0 auto;
+        width: 100%;
+    }
+    .posts li{
+        width:96%;
+    }
+    .tools-box li{
+        display: inline-block;
+        width:220px;
+    }
+}
