--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -83,7 +83,7 @@ h1, h2, h3, h4 {
 
 /*----------------------------------*/
 body{
-    background-color: #fff;
+    background-color: #fefefe;
 }
 
 ul, li{
