--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -148,7 +148,7 @@ a:hover {
 }
 .posts li {
     float: left;
-    min-height: 130px;
+    min-height: 140px;
     max-height: 480px;
     position: relative;
     border-radius: 0 10px 0 0;
@@ -159,7 +159,7 @@ a:hover {
     border-bottom: #efefef 1px solid;
 }
 .posts .article-excerpt {
-    padding-bottom: 16px;
+    margin: 16px 0;
     overflow: hidden;
     font-family: 微软雅黑;
     font-size: 12px;
