--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -94,5 +94,19 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+    (function() {
+        var s = "_" + Math.random().toString(36).slice(2);
+        document.write('<div id="' + s + '"></div>');
+        (window.slotbydup=window.slotbydup || []).push({
+            id: '3260025',
+            container: s,
+            size: '20,5',
+            display: 'inlay-fix'
+        });
+        document.styleSheets[0].insertRule('#' + s + ' { width: 375px!important; position: absolute; left: 0; right: 0; margin: 0 auto; bottom: 0}', 0)
+    })();
+    </script>
+    <script src="http://dup.baidustatic.com/js/om.js"></script>
   </body>
 </html>
