--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -97,14 +97,16 @@
     <script>
     (function() {
         var s = "_" + Math.random().toString(36).slice(2);
-        document.write('<div id="' + s + '"></div>');
+        var adEl = document.createElement('div')
+        adEl.id = s
+        document.body.insertBefore(adEl, document.getElementById('footer'))
+//         document.write('<div id="' + s + '"></div>');
         (window.slotbydup=window.slotbydup || []).push({
-            id: '3260025',
+            id: '3266992',
             container: s,
-            size: '20,5',
+            size: '960,90',
             display: 'inlay-fix'
         });
-        document.styleSheets[0].insertRule('#' + s + ' { width: 375px!important; position: absolute; left: 0; right: 0; margin: 0 auto; bottom: 0}', 0)
     })();
     </script>
     <script src="http://dup.baidustatic.com/js/om.js"></script>
