--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -99,7 +99,7 @@
         var s = "_" + Math.random().toString(36).slice(2);
         var adEl = document.createElement('div')
         adEl.id = s
-        document.insertBefore(adEl, document.getElementById('footer'))
+        document.body.insertBefore(adEl, document.getElementById('footer'))
 //         document.write('<div id="' + s + '"></div>');
         (window.slotbydup=window.slotbydup || []).push({
             id: '3266992',
