--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -97,10 +97,9 @@
     <script>
     (function() {
         var s = "_" + Math.random().toString(36).slice(2);
-        var adEl = document.createElement('div')
-        adEl.id = s
-        document.body.insertBefore(adEl, document.getElementById('footer'))
-//         document.write('<div id="' + s + '"></div>');
+        var adEl = document.createElement('div');
+        adEl.id = s;
+        document.body.insertBefore(adEl, document.getElementById('footer'));
         (window.slotbydup=window.slotbydup || []).push({
             id: '3266992',
             container: s,
