--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -106,6 +106,7 @@
             size: '960,90',
             display: 'inlay-fix'
         });
+        document.styleSheets[0].insertRule('#' + s + ' { max-width: 100%; overflow: hidden; }', 0)
     })();
     </script>
     <script src="http://dup.baidustatic.com/js/om.js"></script>
