--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -94,21 +94,12 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
-    (function() {
-        var s = "_" + Math.random().toString(36).slice(2);
-        var adEl = document.createElement('div');
-        adEl.id = s;
-        document.body.insertBefore(adEl, document.getElementById('footer'));
-        (window.slotbydup=window.slotbydup || []).push({
-            id: '3266992',
-            container: s,
-            size: '960,90',
-            display: 'inlay-fix'
-        });
-        document.styleSheets[0].insertRule('#' + s + ' { max-width: 100%; overflow: hidden; }', 0)
-    })();
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-2442506065854837",
+        enable_page_level_ads: true
+      });
     </script>
-    <script src="http://dup.baidustatic.com/js/om.js"></script>
   </body>
 </html>
